--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,9 @@
   "integrations": {
     "capacitor": {}
   },
+  "styles": [
+    "node_modules/bootstrap/dist/css/bootstrap.min.css",
+    "src/styles.scss"
+  ],
   "type": "angular"
 }
