--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
+    "@syncfusion/ej2-angular-dropdowns": "^21.1.38",
+    "@syncfusion/ej2-ng-charts": "^16.2.50",
+    "bootstrap": "^5.2.3",
     "ionicons": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
